@@ -9,6 +9,7 @@ META.yml
 README
 t/01base.t
 t/02derived.t
+t/03require.t
 t/coretests.pm
 vperl/vpp.pm
 vutil/vutil.c
